TreeSpotter_OOP/app/src/main/java/com/example/treespotter_oop/model/TestTreeClass.kt
package com.example.treespotter_oop.model

import java.util.*

fun main() {
//    val mnTree = Tree("Red Pine", "MN")
//    val wiTree = Tree("Sugar Maple", "WI")
//    val miTree = Tree(name="Eastern White Pine", state="MI")
//
//    println(wiTree.name)
//    mnTree.spotted = true
//    println(mnTree.spottedDaysAgo)
//
//    println(wiTree.spotted)
//    wiTree.dateSpotted = Date()
//
////    println(wiTree.isMapleTree)// error
//
//    wiTree.makeMapleSyrup()   // prints "OK! If it's spring"
//    miTree.makeMapleSyrup()   // prints "Wrong kind of tree"

}

//    val tree = Tree("ewp", "MI","https://", R.drawable.eastern_white_pine)
//    tree.spotted = true
//    println(tree.dateSpotted)
//    println(tree.spotted)
//
//    tree.dateSpotted = Date()



class TestTreeClass {


}